CAUSEWAY-3989: yaml export format option (user choice)